# LeadGym

./: Dockerfile  Inference.py  Readme.md  environment.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_env.py  test_tasks.py
lead_scoring/: __init__.py  client.py  lead_data.py  models.py  scoring.py
lead_scoring/server/: __init__.py  app.py  lead_scoring_environment.py
lead_scoring_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tasks/: __init__.py  easy.py  grader.py  hard.py  medium.py
